# pdf-extractext

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_REFERENCE.md  README.md  package.json  pyproject.toml  skills-lock.json  tailwind.config.js
app/: cache.py  main.py  ocr.py  pdf_extractor.py  pdf_service.py  text_structure.py
app/application/: __init__.py
app/application/interfaces/: ai_provider.py  summary_repository.py
app/application/services/: __init__.py  pdf_service.py  summary_service.py
app/core/: __init__.py
app/infrastructure/: __init__.py
app/presentation/: __init__.py
app/tests/: conftest.py
config/: settings.py  urls.py
docs/: CHANGELOG.md  COMPONENT_REFERENCE.md  INDEX.md  README.md  TAILWIND_DESIGN.md  TAILWIND_SETUP.md  VERIFICATION_CHECKLIST.md  eliminacion_nvidia.md  estructura.md  guia_paso_a_paso.md  migracion_fastapi_a_django.md  nueva_API.md  pdf_extractor.md  referencia_rapida.md  tailwind_setup.md  workflow.md
mongo/: docker-compose.yml
mongo/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--4205807113164800234.wt  collection-2--4205807113164800234.wt  index-1--4205807113164800234.wt  index-3--4205807113164800234.wt  sizeStorer.wt
static/css/: input.css  output.css
summaries/: admin.py  apps.py  models.py  services.py  urls.py  views.py
summaries/migrations/: 0001_initial.py
tests/: test_cache.py  test_openrouter_api.py  test_pdf_extractor.py  test_pdf_service.py  test_text_structure.py
tests/integration/: test_pdf_summary_api.py
tests/unit/: test_file_handler.py  test_pdf_service.py
(+13 files in other folders)
