[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-extractext"
version = "0.1.0"
description = "Extract and summarize PDFs using AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
